--- a/src/main/resources/assets/tjfcore/lang/en_us.lang
+++ b/src/main/resources/assets/tjfcore/lang/en_us.lang
@@ -4646,3 +4646,6 @@ gregtech.multiblock.cryogenic_freezer.description=The Cryogenic Freezer is built
 gtadditions.machine.cryogenic_freezer.name=Cryogenic Freezer
 recipemap.cryogenic_freezer=Cryogenic Freezer
 gregtech.multiblock.vol_cryo.description=This multiblock parallels once per overlock
+
+gregtech.recipe.adv_fusion_eu_return=EU Returned:
+gregtech.recipe.adv_fusion_coil_tier=Coil Tier:
