void miner + other stuff
Signed-off-by: brian <brianbosseyt@gmail.com>

--- a/src/main/resources/assets/tjfcore/lang/en_us.lang
+++ b/src/main/resources/assets/tjfcore/lang/en_us.lang
@@ -3044,6 +3044,7 @@ gregtech.multiblock.recipe=Screw to change recipe. Currently using: %s
 gregtech.universal.tooltip.efficiency=Efficiency: %s %%
 
 gregtech.multiblock.universal.energy_used=Energy Use: %d EU
+gregtech.multiblock.universal.vom.temperature=Temperature: %s K
 gregtech.multiblock.universal.drilling_fluid_amount=Current Drilling Mud: %.2fmB
 gregtech.multiblock.universal.overheat=Overheated!
 
