--- a/src/main/resources/assets/tjfcore/lang/en_us.lang
+++ b/src/main/resources/assets/tjfcore/lang/en_us.lang
@@ -4640,7 +4640,7 @@ gregtech.multiblock.extreme_diesel_engine.description=The Diesel Engine is a mul
 tjfcore.multiblock.electric_blast_furnace.tooltip.1=For every §a900K§7 above the recipe temperature, a multiplicative §a95%%§7 energy multiplier is applied pre-overclocking.
 tjfcore.multiblock.electric_blast_furnace.tooltip.2=For every §a1800K§7 above the recipe temperature, one overclock becomes §a100%%§7 efficient.
 tjfcore.multiblock.electric_blast_furnace.tooltip.3=For every voltage tier above §aMV§7, temperature is increased by §a100K§7.
-gregtech.multiblock.volcanus.description=The Volcanus is built the same as the EBF, but with different casings. It consumes pyrotheum 2^ max voltage tier mB of pyrotheum per tick.
+gregtech.multiblock.volcanus.description=The Volcanus is built the same as the EBF, but with different casings. It consumes pyrotheum 2^ max voltage tier mB of pyrotheum per tick. Max Voltage of ZPM.
 recipemap.volcanus.name=Volcanus
 tjfcore.machine.volcanus.name=Volcanus
 gregtech.multiblock.cryogenic_freezer.description=The Cryogenic Freezer is built the same as the Vacuum Freezer, but with different casings. It consumes cryothium 2^ max voltage tier mB of cryotheum per tick.
