--- a/src/main/resources/assets/tjfcore/lang/en_us.lang
+++ b/src/main/resources/assets/tjfcore/lang/en_us.lang
@@ -2150,11 +2150,11 @@ recipemap.large_thermal_centifuge.name=Large Thermal Centrifuge
 recipemap.large_assembler.name=Large Assembler
 recipemap.large_electrolyzer.name=Large Electrolyzer
 recipemap.large_extruder.name=Large Extruder
-recipemap.large_centrifuge.name=Large Centrifuge
+recipemap.large_centrifuge.name=Advanced Centrifuge
 recipemap.large_chemical_reactor.name=Large Chemical Reactor
 recipemap.large_cutting.name=Large Cutting Machine
 recipemap.large_macerator.name=Large Macerator
-recipemap.large_mixer.name=Large Mixer
+recipemap.large_mixer.name=Advanced Mixer
 recipemap.large_sifter.name=Large Sifter
 recipemap.large_bender_and_forming.name=Large Bending and Forming machine
 recipemap.large_washing_plant.name=Large Washing Plant
