--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4656,6 +4656,7 @@ gregtech.multiblock.vol_cryo.description=This multiblock parallels once per over
 gregtech.recipe.adv_fusion_eu_return=EU Returned:
 gregtech.recipe.adv_fusion_coil_tier=Coil Tier:
 
+tile.wire_coil.naquadah_alloy_coil.name=Naquadah Alloy Coil Block
 tile.wire_coil.titan_steel_coil.name=Titan Steel Coil Block
 tile.wire_coil.pikyonium_coil.name=Pikyonium Coil Block
 tile.wire_coil.black_titanium_coil.name=Black Titanium Coil Block
