--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -2070,9 +2070,9 @@ tile.gcyl_explosive.industrial_tnt.name=Industrial TNT
 tile.gcyl_explosive.powder_barrel.name=Powder Barrel
 tile.gcyl_multiblock_casing2.laser_engraver_casing.name=Laser-Safe Casing
 
-tile.gcyl_metal_casing_1.casing_hastelloy_x78.name=Matrix-Stiffened Hastelloy X78 Casing
+tile.gcyl_metal_casing_1.casing_hastelloyx_78.name=Matrix-Stiffened Hastelloy X78 Casing
 tile.gcyl_metal_casing_1.casing_hastelloy_n.name=Oxidation Resistant Hastelloy N Casing
-tile.gcyl_metal_casing_1.casing_hastelloy_k243.name=High Stability Hastelloy K243 Casing
+tile.gcyl_metal_casing_1.casing_hastelloyk_243.name=High Stability Hastelloy K243 Casing
 tile.gcyl_metal_casing_1.casing_incoloy_813.name=Corrosion Proof Incoloy 813 Casing
 tile.gcyl_metal_casing_1.casing_incoloy_ma956.name=Spacecraft Grade Incoloy MA-956 Casing
 tile.gcyl_metal_casing_1.casing_maraging_steel_250.name=Long-Lasting Maraging Steel 250 Casing
@@ -4671,3 +4671,5 @@ gcyl.material.pd_fullerene_matrix=Palladium Fullerene Matrix
 gcyl.material.lignite=Lignite Coal
 gcyl.material.lv_superconductor_base=LV Superconductor Base
 gcyl.material.lv_superconductor=LV Superconductor
+gcyl.material.jasper=Jasper
+gcyl.material.glyceryl=Glyceryl
