--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4675,4 +4675,4 @@ gcyl.material.jasper=Jasper
 gcyl.material.glyceryl=Glyceryl
 
 metaitem.circuit.assembly.name=Micro Assembly
-metaitem.circuit.mainframe.name=Mirco Mainframe
+metaitem.circuit.mainframe.name=Micro Mainframe
