many lang fixes

--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -152,31 +152,30 @@ metaitem.optical_processing_core.name=Optical Processing Core
 metaitem.cosmic_compute_unit.name=Cosmic Compute Unit
 metaitem.cosmic_processing_core.name=Cosmic Processing Core
 
-metaitem.potassium_cyanide.name=Potassium Cyanide
-metaitem.succinic_acid.name=Succinic Acid
-metaitem.succinimide.name=Succinimide
-metaitem.bromo_succinimide.name=Bromo Succinimide
-metaitem.benzophenanthrenylacetonitrile.name=Benzophenanthrenylacetonitrile
+gcyl.material.potassium_cyanide=Potassium Cyanide
+gcyl.material.succinic_acid=Succinic Acid
+gcyl.material.succinimide=Succinimide
+gcyl.material.bromo_succinimide=Bromo Succinimide
+gcyl.material.benzophenanthrenylacetonitrile=Benzophenanthrenylacetonitrile
 
 
-metaitem.tial_chloride.name=TiAl Chloride
-metaitem.dimethylaminopyridine.name=Dimethylaminopyridine (DMAP)
-metaitem.pdirreoceos.name=PdIrReOCeOsSi Catalyst
-metaitem.sodium_ethoxide.name=Sodium Ethoxide
-metaitem.mgcl_bromide.name=Magnesium Chloride Bromide
-metaitem.sarcosine.name=Sarcosine
-metaitem.sodium_nitrite.name=Sodium Nitrite
-metaitem.znfealcl_catalyst.name=ZnFeAlCl Catalyst
-metaitem.difluorobenzophenone.name=Difluorobenzophenone
-metaitem.aluminium_chloride.name=Aluminium Chloride
+gcyl.material.tial_chloride=TiAl Chloride
+gcyl.material.dimethylaminopyridine=Dimethylaminopyridine (DMAP)
+gcyl.material.pdirreoceos=PdIrReOCeOsSi Catalyst
+gcyl.material.sodium_ethoxide=Sodium Ethoxide
+gcyl.material.mgcl_bromide=Magnesium Chloride Bromide
+gcyl.material.sarcosine=Sarcosine
+gcyl.material.znfealcl_catalyst=ZnFeAlCl Catalyst
+gcyl.material.difluorobenzophenone=Difluorobenzophenone
+gcyl.material.aluminium_chloride=Aluminium Chloride
 
-metaitem.terephthalaldehyde.name=Terephthalaldehyde
-metaitem.pre_zylon.name=Pre Zylon
-metaitem.aupdc_catalyst.name=AuPdC Catalyst
-metaitem.cyanonaphthalene.name=Cyanonaphthalene
-metaitem.tin_chloride.name=Tin Chloride
-metaitem.triphenylphosphine.name=Triphenylphosphine
-metaitem.methylbenzophenanthrene.name=Methylbenzophenanthrene
+gcyl.material.terephthalaldehyde=Terephthalaldehyde
+gcyl.material.pre_zylon=Pre Zylon
+gcyl.material.aupdc_catalyst=AuPdC Catalyst
+gcyl.material.cyanonaphthalene=Cyanonaphthalene
+gcyl.material.tin_chloride=Tin Chloride
+gcyl.material.triphenylphosphine=Triphenylphosphine
+gcyl.material.methylbenzophenanthrene=Methylbenzophenanthrene
 
 metaitem.large.fluoride.battery.empty.name=Large Fluoride Battery Hull
 metaitem.large.lithium.sulfide.battery.empty.name=Large Lithium Sulfide Battery Hull
@@ -456,7 +455,7 @@ metaitem.data_stick.tooltip.fluid=Fluid: %d
 metaitem.tool.datasupracausal.name=Supra-Causal Data Module
 metaitem.tool.datasupracausal.tooltip=Storage for Causality Violating Data/n§cCan only be read by a Data Bank
 
-etaitem.acrylic_fibers=Acrylic Fibers
+gcyl.material.acrylic_fibers=Acrylic Fibers
 gcyl.material.uranyl_nitrate=Uranyl Nitrate
 gcyl.material.calcium_salts=Calcium Salts
 gcyl.material.sodium_salts=Sodium Salts
@@ -558,16 +557,16 @@ gcyl.material.aluminium_trifluoride=Aluminium Trifluoride
 gcyl.material.erbium_trifluoride=Erbium Trifluoride
 gcyl.material.zblan_dust=ZBLAN Dust
 gcyl.material.erbium_doped_zblan_dust=Erbium Doped ZBLAN
-gcyl.material.zblan=ZBLAN
-gcyl.material.zblan_ingot=ZBLAN Ingot
-gcyl.material.hot_annealed_zblan_ingot=Hot Annealed ZBLAN Ingot
-gcyl.material.zblan_fiber=ZBLAN Fiber
-gcyl.material.erbium_doped_zblan=Erbium Doped ZBLAN
-gcyl.material.cladded_optical_fiber_core=Cladded Optical Fiber Core
-gcyl.material.degenerate.rhenium.dust=Degenerate Rhenium Dust
-gcyl.material.degenerate.rhenium.plate=Degenerate Rhenium Plate
-gcyl.material.rhenium.plasma.containment.cell=Rhenium Plasma Containment Cell
-gcyl.material.plasma.containment.cell=Plasma Containment Cell
+metaitem.zblan.name=ZBLAN
+metaitem.zblan_ingot.name=ZBLAN Ingot
+metaitem.hot_annealed_zblan_ingot.name=Hot Annealed ZBLAN Ingot
+metaitem.zblan_fiber.name=ZBLAN Fiber
+metaitem.erbium_doped_zblan.name=Erbium Doped ZBLAN
+metaitem.cladded_optical_fiber_core.name=Cladded Optical Fiber Core
+metaitem.degenerate.rhenium.dust.name=Degenerate Rhenium Dust
+metaitem.degenerate.rhenium.plate.name=Degenerate Rhenium Plate
+metaitem.rhenium.plasma.containment.cell.name=Rhenium Plasma Containment Cell
+metaitem.plasma.containment.cell.name=Plasma Containment Cell
 
 gcyl.material.vanadium_slag=Vanadium Slag
 gcyl.material.vanadium_slag_dust=Vanadium Slag Dust
@@ -711,7 +710,7 @@ gcyl.material.magnetorestrictive_alloy=Magnetorestrictive Alloy
 gcyl.material.boron_oxide=Boron Trioxide
 gcyl.material.lithium_aluminium_fluoride=Lithium Aluminium Fluoride
 gcyl.material.bets_perrhenate=Bisethylenedithiotetraselenafulvalene (BETS) Perrhenate
-gcyl.material.tbcco_dust=TBCCO Dust
+gcyl.material.tbccodust=TBCCO
 gcyl.material.borocarbide_dust=Borocarbide Dust
 gcyl.material.actinium_superhydride=Actinium Superhydride
 gcyl.material.strontium_seaborgium_ruthenate=Strontium Seaborgium Ruthenate Superconductor Dust
@@ -835,7 +834,7 @@ gcyl.material.calcium_cyanamide=Calcium Cyanamide
 gcyl.material.purified_pyrochlore=Purified Pyrochlore
 gcyl.material.purified_columbite=Purified Columbite
 gcyl.material.selectively_mutated_cupriavidius_necator=Selectively Mutated Cupriavidius Necator
-gcyl.material.charged_cesium_cerium_cobalt_indium=Charged Caesium Cerium Cobalt Indium
+gcyl.material.charged_caesium_cerium_cobalt_indium=Charged Caesium Cerium Cobalt Indium
 gcyl.material.rhenium_chloride=Rhenium Chloride
 gcyl.material.hassium_chloride=Hassium Chloride
 gcyl.material.antimony_trichloride=Antimony Trichloride
@@ -1646,8 +1645,6 @@ gcyl.machine.bio_reactor.name=Bio Reactor (BR)
 gcyl.multiblock.bio_reactor.description=The Bio Reactor performs complex bio reactions.
 gcyl.machine.plasma_condenser.name=Plasma Condenser (PC)
 gcyl.multiblock.plasma_condenser.description=Condenses Plasmas into fluids and solids.
-gcyl.machine.advanced_fusion_reactor.name=Advanced Fusion Reactor Computer (AFRC)
-gcyl.machine.multiblock.description=The Advanced Fusion Reactor performs high level fusion reactions. It also turns a coolant into a hot version.
 gcyl.machine.central_monitor.name=Central Monitor (CM)
 gcyl.machine.monitor_screen.name=Monitor Screen (MS)
 gcyl.machine.chemical_plant.name=Chemical Plant (CP)
@@ -2653,10 +2650,10 @@ gcyl.material.dubnium=Dubnium
 gcyl.material.reactor_steel=Reactor Steel
 gcyl.material.zylon=Zylon
 gcyl.material.polyetheretherketone=Polyetheretherketone (PEEK)
-gcyl.material.hastelloy_k243=Hastelloy K243
+gcyl.material.hastelloyk_243=Hastelloy K243
 gcyl.material.hastelloyx_78=Hastelloy X78
 gcyl.material.enriched_naquadah_alloy=Enriched Naquadah Alloy
-gcyl.material.incoloy813=Incoloy 813
+gcyl.material.incoloy_813=Incoloy 813
 gcyl.material.bohrium=Bohrium
 gcyl.material.seaborgium=Seaborgium
 gcyl.material.uhv_superconductor=UHV Superconductor
@@ -2694,7 +2691,7 @@ gcyl.material.caliche=Caliche
 gcyl.material.iodized_oil=Iodized Oil
 gcyl.material.lithium_titanate=Lithium Titanate
 gcyl.material.carbon_nanotubes=Carbon Nanotubes
-gcyl.material.titanium50=Titanium 50
+gcyl.material.titanium_50=Titanium 50
 gcyl.material.metastable_oganesson=Metastable Oganesson
 gcyl.material.metastable_flerovium=Metastable Flerovium
 gcyl.material.electrically_impure_copper=Electrically Impure Copper
@@ -3819,7 +3816,7 @@ gcyl.material.vitamin_a=Vitamin A
 gcyl.material.ethylene_oxide=Ethylene Oxide
 gcyl.material.ethanolamine=Ethanolamine
 gcyl.material.biotin=Biotin
-gcyl.material.b27_supplement=B27 Supplement
+gcyl.material.b_27_supplement=B27 Supplement
 gcyl.material.clear_ammonia_solution=Clean Ammonia Solution
 gcyl.material.catalase=Catalase
 gcyl.material.blood=Blood
@@ -4032,12 +4029,12 @@ gcyl.material.supercritical_deuterium=Supercritical Deuterium
 gcyl.material.supercritical_sodium=Supercritical Sodium
 gcyl.material.supercritical_flinak=Supercritical FLiNaK
 gcyl.material.supercritical_flibe=Supercritical FLiBe
-gcyl.material.supercritical_lead_bismuth_eutectic=Supercritical Lead Bismuth Eutectic
+gcyl.material.supercritical_lead_bismuth_eutatic=Supercritical Lead Bismuth Eutectic
 gcyl.material.supercritical_sodium_potassium_alloy=Supercritical Sodium Potassium Alloy
 
 gcyl.material.hot_oganesson=Hot Oganesson
 gcyl.material.titanium_tetrafluoride=Titanium Tetrafluoride
-gcyl.material.titanium50_tetrafluoride=Titanium 50 Tetrafluoride
+gcyl.material.titanium_50_tetrafluoride=Titanium 50 Tetrafluoride
 gcyl.material.carbon_12=Carbon 12
 gcyl.material.carbon_13=Carbon 13
 gcyl.material.nitrogen_14=Nitrogen 14
@@ -4048,22 +4045,22 @@ gcyl.material.og_breeding_base=Oganesson Breeding Base
 gcyl.material.quasifissioning_plasma=Quasifissioning Plasma
 gcyl.material.ytterbium_178=Ytterbium 178
 gcyl.material.flyb_plasma=FlYb Plasma
-gcyl.material.chromium48=Chromium 48
-gcyl.material.iron52=Iron 52
-gcyl.material.nickel56=Nickel 56
-gcyl.material.titanium44=Titanium 44
+gcyl.material.chromium_48=Chromium 48
+gcyl.material.iron_52=Iron 52
+gcyl.material.nickel_56=Nickel 56
+gcyl.material.titanium_44=Titanium 44
 gcyl.material.helium_rich_cno=Helium Rich CNO
 gcyl.material.chromium48_plasma=Chromium 48 Plasma
 gcyl.material.iron52_plasma=Iron 52 Plasma
-gcyl.material.nickel56_plasma=Nickel 56 Plasma
-gcyl.material.titanium44_plasma=Titanium 44 Plasma
+gcyl.material.nickel_56_plasma=Nickel 56 Plasma
+gcyl.material.titanium_44_plasma=Titanium 44 Plasma
 gcyl.material.helium_rich_cno_plasma=Helium Rich CNO Plasma
 gcyl.material.selenite_tellurite_mixture=Selenite Tellurite Mixture
 gcyl.material.selenite_solution=Selenite Solution
 gcyl.material.copper_refining_solution=Copper Refining Solution
 gcyl.material.sodium_hydroxide_bauxite=Sodium Hydroxide Bauxite
-gcyl.material.impure_aloh3_soution=Impure Aluminium Hydroxide Solution
-gcyl.material.pure_aloh3_soution=Pure Aluminium Hydroxide Solution
+gcyl.material.impure_aloh_3_soution=Impure Aluminium Hydroxide Solution
+gcyl.material.pure_aloh_3_soution=Pure Aluminium Hydroxide Solution
 gcyl.material.neutralised_red_mud=Neutralised Red Mud
 gcyl.material.ferric_ree_chloride=Ferric REE Chloride
 gcyl.material.red_mud=Red Mud
@@ -4196,7 +4193,7 @@ gcyl.material.heavy_lepton_mix=Heavy Lepton Mixture
 gcyl.material.cosmic_computing_mix=Cosmic Computing Mixture
 gcyl.material.heavy_quark_enriched_mix=Heavy Quark Enriched Mixture
 gcyl.material.deuterium_superheavy_mix=Deuterium Superheavy Mixture
-gcyl.material.scandium_titanium50_mix=Scandium Titanium-50 Mixture
+gcyl.material.scandium_titanium_50_mix=Scandium Titanium-50 Mixture
 gcyl.material.radon_radium_mix=Radium Radon Mixture
 gcyl.material.phenylsodium=Phenylsodium
 gcyl.material.difluoroaniline=Difluoroaniline
@@ -4206,7 +4203,7 @@ gcyl.material.photopolymer_solution=Photopolymer Solution
 gcyl.material.trichloroferane=Trichloroflerane
 gcyl.material.glucose_iron_solution=Glucose Iron Solution
 gcyl.material.graphene_oxidation_solution=Graphene Oxidation Solution
-gcyl.material.supercritcal_co2=Supercritical Carbon Dioxide
+gcyl.material.supercritcal_co_2=Supercritical Carbon Dioxide
 
 gcyl.material.noble_gases_mixture=Noble Gas Mixture
 gcyl.material.non_metals=Non Metals
@@ -4240,7 +4237,7 @@ gcyl.material.iron_ii_chloride=Iron II Chloride
 gcyl.material.propadiene=Propadiene
 gcyl.material.cyclopentadiene=Cyclopentadiene
 gcyl.material.chloroauric_acid=Chloroauric Acid
-gcyl.material.helium4=Helium 4
+gcyl.material.helium_4=Helium 4
 gcyl.material.fermionic_uu_matter=Fermionic UU-Matter
 gcyl.material.bosonic_uu_matter=Bosonic UU-Matter
 gcyl.material.free_electrons=Free Electrons
@@ -4295,10 +4292,10 @@ gcyl.material.tritium_hydride=Tritium Hydride
 gcyl.material.helium_iii_hydride=Helium 3 Hydride
 gcyl.material.ultraacidic_residue_solution=Ultraacidic Residue Solution
 gcyl.material.xenic_acid=Xenic Acid
-gcyl.material.dusty_liquid_helium3=Dusty Liquid Helium 3
-gcyl.material.taranium_enriched_liquid_helium3=Taranium Enriched Liquid Helium 3
-gcyl.material.taranium_semidepleted_liquid_helium3=Taranium Semidepleted Liquid Helium 3
-gcyl.material.taranium_depleted_liquid_helium3=Taranium Depleted Liquid Helium 3
+gcyl.material.dusty_liquid_helium_3=Dusty Liquid Helium 3
+gcyl.material.taranium_enriched_liquid_helium_3=Taranium Enriched Liquid Helium 3
+gcyl.material.taranium_semidepleted_liquid_helium_3=Taranium Semidepleted Liquid Helium 3
+gcyl.material.taranium_depleted_liquid_helium_3=Taranium Depleted Liquid Helium 3
 gcyl.material.taranium_rich_dusty_helium_plasma=Taranium Rich Dusty Helium Plasma
 gcyl.material.taranium_depleted_helium_plasma=Taranium Depleted Helium Plasma
 gcyl.material.taranium_rich_helium_4=Taranium Rich Liquid Helium 4
@@ -4308,7 +4305,7 @@ gcyl.material.liquid_fluorine=Liquid Fluorine
 gcyl.material.liquid_xenon=Liquid Xenon
 gcyl.material.taranium_poor_liquid_helium_mix=Taranium Poor Liquid Helium Mixture
 gcyl.material.hydroiodic_acid=Hydroiodic Acid
-gcyl.material.cesium_bromide_solution=Caesium Bromide
+gcyl.material.caesium_bromide_solution=Caesium Bromide
 gcyl.material.kanthal_molten=Molten Kanthal
 gcyl.material.nichrome_molten=Molten Nichrome
 gcyl.material.niobium_nitride_molten=Molten Niobium Nitride
@@ -4346,10 +4343,10 @@ gcyl.material.luv_superconductor_base_molten=Molten LuV Superconductor Base
 gcyl.material.iv_superconductor_base_molten=Molten IV Superconductor Base
 gcyl.material.ev_superconductor_base_molten=Molten EV Superconductor Base
 gcyl.material.hv_superconductor_base_molten=Molten HV Superconductor Base
-gcyl.material.hastelloy_k243_molten=Molten Hastelloy K243
+gcyl.material.hastelloyk_243_molten=Molten Hastelloy K243
 gcyl.material.hastelloy_x78_molten=Molten Hastelloy X78
 gcyl.material.enriched_naquadah_alloy_molten=Molten Enriched Naquadah Alloy
-gcyl.material.incoloy813_molten=Molten Incoloy 813
+gcyl.material.incoloy_813_molten=Molten Incoloy 813
 gcyl.material.abyssal_alloy_molten=Molten Abyssal Alloy
 gcyl.material.naquadriatic_taranium_molten=Molten Naquadriatic Taranium
 gcyl.material.zeron_molten=Molten Zeron
@@ -4674,5 +4671,41 @@ gcyl.material.lv_superconductor=LV Superconductor
 gcyl.material.jasper=Jasper
 gcyl.material.glyceryl=Glyceryl
 
+gcyl.material.uranium_generic=Uranium
+gcyl.material.plutonium_generic=Plutonium
+gcyl.material.plutonium_244=Plutonium 244
+gcyl.material.americium_241=Americium 241
+gcyl.material.americium_243=Americium 243
+gcyl.material.fermium_258=Fermium 258
+gcyl.material.fermium_259=Fermium 259
+gcyl.material.californium_252=Californium 252
+gcyl.material.californium_253=Californium 253
+gcyl.material.mendelevium_261=Mendelevium 261
+gcyl.material.curium_247=Curium 247
+gcyl.material.curium_250=Curium 250
+gcyl.material.einsteinium_253=Einsteinium 253
+
+gcyl.material.sodium_nitrite=Sodium Nitrite
+gcyl.material.niter=Niter
+gcyl.material.tanzanite=Tanzanite
+gcyl.material.vinteum=Vinteum
+gcyl.material.snow=Snow
+
+gcyl.material.max_superconductor=MAX Superconductor
+
 metaitem.circuit.assembly.name=Micro Assembly
 metaitem.circuit.mainframe.name=Micro Mainframe
+
+gcym.machine.tiered_hatch.opv.name=Overpowered Voltage Control Unit
+
+gcyl.machine.adv_fusion_reactor.uhv.name=Advanced Fusion Reactor Computer Mark 1 (AFRC1)
+gcyl.machine.adv_fusion_reactor.uev.name=Advanced Fusion Reactor Computer Mark 2 (AFRC2)
+gcyl.machine.adv_fusion_reactor.uiv.name=Advanced Fusion Reactor Computer Mark 3 (AFRC3)
+gcyl.machine.adv_fusion_reactor.uxv.name=Advanced Fusion Reactor Computer Mark 4 (AFRC4)
+gcyl.machine.adv_fusion_reactor.opv.name=Advanced Fusion Reactor Computer Mark 5 (AFRC5)
+
+gcyl.machine.adv_fusion_reactor.tooltip.1=The Advanced Fusion Reactor performs high level fusion reactions.
+gcyl.machine.adv_fusion_reactor.tooltip.2=It also turns a coolant into a hot version.
+gcyl.machine.adv_fusion_reactor.tooltip.3=Gives a perfect overclock per tier above recipe.
+gcyl.machine.adv_fusion_reactor.tooltip.4=Returned EU is never outputted, only discounted from recipe EU/t.
+
