--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4731,7 +4731,7 @@ gcyl.machine.adv_fusion_reactor.tooltip.2=It also turns a coolant into a hot ver
 gcyl.machine.adv_fusion_reactor.tooltip.3=Gives a perfect overclock per tier above recipe.
 gcyl.machine.adv_fusion_reactor.tooltip.4=Returned EU is never outputted, only discounted from recipe EU/t.
 
-gcyl.machine.ore_factory.name=Ore Processing Factory
+gcyl.machine.ore_factory.name=Ore Processing Factory (OPF)
 gcyl.machine.ore_factory.config.0=Macerate>Ore Wash>Thermal Centrifuge>Macerate
 gcyl.machine.ore_factory.config.1=Macerate>Ore Wash>Macerate>Centrifuge
 gcyl.machine.ore_factory.config.2=Macerate>Ore Wash>Sifter
@@ -4739,3 +4739,26 @@ gcyl.machine.ore_factory.config.3=Macerate>Macerate>Centrifuge
 gcyl.machine.ore_factory.config.4=Macerate>Thermal Centrifuge>Macerate
 
 gcyl.machine.maintenance_hatch_sterile_cleanroom_auto.name=Automatic Sterile Filtration Maintenance Hatch
+
+gcyl.research.deep_platinum=§6Deep Platinum Data
+gcyl.recipe.scan_for_deep_miner=Scan for Deep Miner
+gcyl.recipe.temperature=Temperature: %,dK
+
+gcyl.machine.deep_miner.name=Deep Miner (DM)
+gcyl.machine.deep_miner.config.0=Fluid type set to Lava
+gcyl.machine.deep_miner.config.1=Fluid type set to Pyrotheum
+gcyl.machine.deep_miner.config.2=Fluid type set to Helium Plasma
+gcyl.machine.deep_miner.config.3=Fluid type set to Neutron Plasma
+gcyl.multiblock.deep_miner.tooltip.1=For obtaining resources deep in §6Bedrock§r§7. §aRecipes require scanned Data§r§7.
+gcyl.multiblock.deep_miner.tooltip.2=Controller must be placed at §eY=8§r§7 or lower.
+gcyl.multiblock.deep_miner.tooltip.3=Use a §bScrewdriver§r§7 to change between §bFluid§r§7 inputs.
+gcyl.multiblock.deep_miner.tooltip.4=Accepts §cLava§r§7 (.75), §6Pyrotheum§r§7 (1), §eHelium Plasma§r§7 (4), or §8Neutron Plasma§r§7 (16) with §bBonuses§r§7 increasing from left to right.
+gcyl.multiblock.deep_miner.tooltip.5=Maximum §bTemperature§r§7 depends on §bFluid§r§7 input and §bCoil§r§7 tier.
+gcyl.multiblock.deep_miner.tooltip.6=Gains §cHeat§r§7 from §bFluid§r§7 input. Hotter §bFluids§r§7 increases the §bTemperature§r§7 faster.
+gcyl.multiblock.deep_miner.tooltip.7=Loses §cHeat§r§7 when not running and when there is no heating §bFluids§r§7.
+gcyl.multiblock.deep_miner.tooltip.8=For every §b1000K§r§7 above recipe temperature, the recipe duration is multiplied by §e0.80§r§7.
+gregtech.multiblock.deep_miner.max.temperature=Max Temperature: %s K
+recipemap.deep_miner.name=Deep Miner
+
+gcyl.machine.deep_miner.description=The Deep Miner provides resources. Use the scanner to scan certain materials to gain access to recipes. The multiblock gains
+
