--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4740,12 +4740,22 @@ gcyl.machine.ore_factory.config.4=Macerate>Thermal Centrifuge>Macerate
 
 gcyl.machine.maintenance_hatch_sterile_cleanroom_auto.name=Automatic Sterile Filtration Maintenance Hatch
 
-metaitem.tool.data.deep_miner=Deep Miner Data Storage
-metaitem.tool.data.deep_miner.tooltip=Data for Scanned Material
+metaitem.tool.data.deep_miner.name=Deep Miner Data Storage
+metaitem.tool.data.deep_miner.tooltip=Data Storage Material Scans
 gcyl.recipe.scan_for_deep_miner=Scan for Deep Miner
 gcyl.recipe.temperature=Temperature: %,dK
 gcyl.research.deep_platinum=§6Deep Platinum Data
 gcyl.research.deep_platinum.tooltip=§aScan a Platinum Block for this Data
+gcyl.research.deep_rutile=§6Deep Rutile Data
+gcyl.research.deep_rutile.tooltip=§aScan a Titanium Block for this Data
+gcyl.research.deep_pyrochlore=§6Deep Pyrochlore Data
+gcyl.research.deep_pyrochlore.tooltip=§aScan a Niobium Block for this Data
+gcyl.research.deep_diamond=§6Deep Diamond Data
+gcyl.research.deep_diamond.tooltip=§aScan a Diamond Block for this Data
+gcyl.research.deep_aluminium=§6Deep Aluminium Data
+gcyl.research.deep_aluminium.tooltip=§aScan a Aluminium Block for this Data
+
+
 
 gcyl.machine.deep_miner.name=Deep Miner (DM)
 gcyl.machine.deep_miner.config.0=Fluid type set to Lava
@@ -4766,4 +4776,7 @@ recipemap.deep_miner.name=Deep Miner
 
 gcyl.machine.decay_chamber.name=Decay Chamber (DC)
 tile.gcyl_reactor_casing.cladded_reactor_casing.name=Radiation Safe Casing
+
+gcyl.machine.greenhouse_mv.name=Greenhouse (GH)
+gcyl.machine.greenhouse_uv.name=Industrial Greenhouse (IGH)
 
