--- a/src/main/resources/assets/gcyl/lang/en_us.lang
+++ b/src/main/resources/assets/gcyl/lang/en_us.lang
@@ -4788,3 +4788,9 @@ gcyl.machine.greenhouse_uv.name=Industrial Greenhouse (IGH)
 metaitem.cover.ender.item_link.name=Ender Item Link Cover
 metaitem.cover.ender.item_link.tooltip=Transports §rItems§7 with a §rWireless §dEnder§r Connection§7 as §rCover§7.
 cover.conveyor.mode=Conveyor Mode
+
+gcyl.machine.mega_cleanroom.name=Mega Cleanroom (MC)
+gcyl.machine.cleanroom.tooltip.1=§bSize: §f21x21x10 to 101x101x101
+gcyl.machine.cleanroom.tooltip.2=§cMay cause performance issues! Read additional structure info.
+gcyl.machine.cleanroom.tooltip.3=§cTo increase performance, the multiblock only checks its structure pattern on forming and when saving the world.
+gcyl.machine.cleanroom.tooltip.4=§c§lDO NOT TRY TO CHEAT THIS! §r§7Doing so will cause the multiblock to constantly check its structure upon loading into the world, causing major TPS lag until fixed.
